--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
@@ -12,6 +13,10 @@ body {
 
   * {
     box-sizing: border-box;
+  }
+
+  button:active {
+    outline: none !important;
   }
 }
 
