--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,10 @@
 html {
   overflow-x: hidden;
   overflow-y: scroll;
-  scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch;
 }
 
 body {
   font-family: "Barlow", sans-serif;
-  scroll-behavior: smooth;
   width: 100%;
   overflow-x: hidden;
 
@@ -33,6 +30,14 @@ body {
 @media only screen and (max-width: 1440px) and (max-height: 900px) {
   :root {
     font-size: 26px;
+  }
+}
+
+@media only screen and (max-width: 1024px) and (max-height: 1366px) {
+  html,
+  body {
+    overflow-x: auto;
+    overflow-y: auto;
   }
 }
 
