--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -142,7 +142,7 @@ $main-color: #f73859;
     transition: all 0.5s ease;
 
     .menu-list {
-      background-color: #103452;
+      background-color: #2b6391;
     }
 
     .logo {
