--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -1,6 +1,6 @@
 .contact {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 20rem;
   padding: 2rem 0;
   padding-left: 10rem;
   color: white;
@@ -135,6 +135,8 @@
 
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .contact {
+    order: 2;
+    width: 100%;
     padding: 2rem 4rem;
   }
 }
