--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -5,20 +5,36 @@ $main-color: #f73859;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 46rem;
-  height: 4rem;
-  color: rgb(184, 184, 184);
+  width: 100%;
+  padding: 0 12.5rem;
+  height: 2.5rem;
+  color: black;
   box-sizing: border-box;
   z-index: 1;
   transition: all 0.3s ease;
+  position: relative;
+  box-shadow: 0px 1px 10px rgb(224, 224, 224);
+  z-index: 2;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    pointer-events: none;
+  }
 
   .logo {
     display: flex;
     align-items: center;
 
     h1 {
-      font-size: 1rem;
-      font-weight: lighter;
+      font-size: 0.9rem;
+      text-transform: uppercase;
     }
 
     img {
@@ -32,29 +48,28 @@ $main-color: #f73859;
     display: flex;
     align-items: center;
     list-style-type: none;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     margin: 0;
 
     li {
-      margin: 0 0.25rem;
-      letter-spacing: 0.03rem;
-      transition: all 0.5s ease;
+      margin: 0 0.75rem;
+      transition: all 0.3s ease;
 
       &:hover {
-        color: white;
+        color: rgb(54, 157, 241);
         cursor: pointer;
       }
     }
 
-    .main-color-background {
-      background-color: $main-color;
-      color: white;
-      padding: 0.25rem 0.4rem;
-      border-radius: 0.2rem;
+    .round {
+      background-color: rgb(55, 0, 87);
+      padding: 0.1rem 0.75rem;
+      border-radius: 1rem;
+      border: solid 2px rgb(59, 0, 59);
 
       &:hover {
-        background-color: #fff;
-        color: $main-color;
+        background-color: transparent;
+        border-color: white;
       }
     }
   }
@@ -62,51 +77,66 @@ $main-color: #f73859;
   .hamburger {
     display: none;
   }
-
-  .main-color {
-    color: $main-color;
-    transition: all 0.3s ease;
-  }
 }
 
 @media only screen and (max-width: 1600px) and (max-height: 900px) {
   .header {
-    width: 38rem;
+    padding: 0 10rem;
+
+    .hamburger {
+      filter: brightness(0);
+    }
   }
 }
 
 @media only screen and (max-width: 1440px) and (max-height: 900px) {
   .header {
-    width: 36rem;
+    padding: 0 8rem;
   }
 }
 
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .header {
+    position: fixed;
     width: 100%;
     padding: 0 2.5rem;
-    height: 6.5rem;
+    height: 3.5rem;
     transition: all 0.5s ease;
+    z-index: 5;
 
     .menu-list {
       position: absolute;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: flex-start;
+      align-items: center;
       height: 100vh;
-      padding: 6rem 0;
       font-size: 1rem;
       width: 100%;
       color: white;
       right: 0;
       top: 0;
       z-index: 1;
-      opacity: 0;
       pointer-events: none;
       transition: all 0.5s ease;
 
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: rgb(48, 178, 218);
+        opacity: 0;
+        // clip-path: circle(0% at 100% 0%);
+        transition: all 0.3s ease;
+        z-index: -1;
+      }
+
       li {
         opacity: 0;
-        transition: all 0.75s ease;
+        margin: 1.25rem 0;
+        // transition: all 0.75s ease;
       }
 
       .main-color {
@@ -119,6 +149,7 @@ $main-color: #f73859;
         color: white;
         background-color: transparent;
         padding: 0;
+        position: relative;
 
         &:hover {
           color: white;
@@ -134,6 +165,7 @@ $main-color: #f73859;
 
     .hamburger {
       display: block;
+      filter: brightness(0);
       z-index: 5;
     }
   }
@@ -142,7 +174,14 @@ $main-color: #f73859;
     transition: all 0.5s ease;
 
     .menu-list {
-      background-color: #0b3357;
+      &::after {
+        opacity: 1;
+        // clip-path: circle(100%);
+      }
+    }
+
+    .hamburger {
+      filter: none;
     }
 
     .logo {
@@ -164,9 +203,9 @@ $main-color: #f73859;
 @media only screen and (max-width: 414px) and (max-height: 823px) {
   .header {
     padding: 0.5rem;
-    align-items: flex-start;
-    height: 4rem;
+    height: 3rem;
     transition: all 0.5s ease;
+    box-shadow: none;
 
     .menu-list {
       padding: 0;
