--- a/src/components/scroll-top/scroll-top.styles.scss
+++ b/src/components/scroll-top/scroll-top.styles.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 1.75rem;
   height: 1.5rem;
-  background-color: #f73859;
+  background-color: rgb(54, 157, 241);
   border-radius: 0.1rem;
   bottom: 2rem;
   right: 1.5rem;
@@ -18,7 +18,7 @@
   }
 
   &:hover {
-    background-color: #9b2135;
+    background-color: rgb(35, 98, 150);
     cursor: pointer;
   }
 }
