--- a/src/components/skill-list-desktop/skill-list-desktop.styles.scss
+++ b/src/components/skill-list-desktop/skill-list-desktop.styles.scss
@@ -1,14 +1,47 @@
 .skill-list-desktop {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   transition: all 0.75s ease;
   transform: translateY(300px);
+  padding: 3rem 0;
   opacity: 0;
-  margin-top: 1.5rem;
 
   .list {
     display: flex;
-    position: absolute;
-    padding: 0 4rem;
+    justify-content: center;
+    padding: 0 2rem;
+  }
+
+  .arrow {
+    font-size: 2rem;
+    cursor: pointer;
+    transition: all 0.5s ease;
+
+    &:hover {
+      color: rgb(117, 154, 181);
+    }
+  }
+
+  .inactive {
+    color: rgb(117, 154, 181);
+    pointer-events: none;
+  }
+}
+
+@media only screen and (max-width: 1600px) and (max-height: 900px) {
+  .skill-list-desktop {
+    .list {
+      padding: 0 0.75rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 1280px) and (max-height: 800px) {
+  .skill-list-desktop {
+    .list {
+      padding: 0 0.5rem;
+    }
   }
 }
