--- a/src/components/skill-list-mobile/skill-list-mobile.styles.scss
+++ b/src/components/skill-list-mobile/skill-list-mobile.styles.scss
@@ -1,111 +1,43 @@
 .skill-list-mobile {
   margin-top: 1rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
   transition: all 0.75s ease;
   transform: translateY(300px);
   opacity: 0;
 
-  .skill-box {
-    width: 12rem;
-    height: 12rem;
+  .list {
     display: flex;
-    margin: 0 1.5rem;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    transition: all 0.3s ease;
-    position: relative;
+  }
 
-    * {
-      transition: all 0.3s ease;
-    }
+  .arrow-mobile {
+    font-size: 2rem;
+    margin: 0 1rem;
+  }
 
-    .top {
-      width: 100%;
-      padding: 1rem 1rem;
-      display: flex;
-      justify-content: center;
-
-      .logo {
-        width: 3.75rem;
-        height: 3.75rem;
-        margin: 0;
-      }
-    }
-
-    .bottom {
-      transition: all 0.5s ease;
-      width: 16rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .bar {
-        width: 16rem;
-        display: flex;
-
-        i {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          text-align: center;
-          width: 2rem;
-          height: 1.5rem;
-          background-color: #0d1018;
-          color: white;
-          cursor: pointer;
-          padding: 0.3rem;
-          border-radius: 0.15rem;
-          margin: 0 0.1rem;
-        }
-
-        .inactive {
-          color: gray;
-          pointer-events: none;
-        }
-
-        .title {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin: 0;
-          font-size: 1rem;
-          color: #f73859;
-          text-align: center;
-          width: 14rem;
-          height: 1.5rem;
-          background-color: #0d1018;
-          border-radius: 0.15rem;
-          font-weight: bold;
-        }
-      }
-
-      .text {
-        width: 14rem;
-        height: 5rem;
-        color: black;
-        font-size: 0.55rem;
-        text-align: center;
-        padding: 0.5rem;
-      }
-    }
+  .inactive {
+    color: gray;
+    pointer-events: none;
   }
 }
 
-@media only screen and (max-width: 768px) and (max-height: 1024px) {
+@media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .skill-list-mobile {
     margin-top: 0.5rem;
-    .skill-box {
-      .top {
-      }
+    padding: 2rem 0;
+  }
+}
 
-      .bottom {
-        .bar {
-          width: 14rem;
-        }
-      }
+@media only screen and (max-width: 414px) and (max-height: 823px) {
+  .skill-list-mobile {
+    display: flex;
+
+    .list {
+      padding: 0;
+    }
+
+    .arrow-mobile {
+      margin: 0;
     }
   }
 }
