--- a/src/components/skill/skill.styles.scss
+++ b/src/components/skill/skill.styles.scss
@@ -2,74 +2,143 @@ $main-color: #3e64ff;
 $second-color: #0f4c75;
 
 .skill {
-  width: 12rem;
-  height: 12rem;
+  width: 10rem;
+  height: 12.5rem;
   display: flex;
-  margin: 0 1.5rem;
+  margin: 0 1.25rem;
+  padding: 1rem;
   flex-direction: column;
   align-items: center;
   color: white;
+  background-color: rgb(250, 250, 250);
   transition: all 0.3s ease;
   position: relative;
+  border-radius: 1.25rem;
+  box-shadow: 0 5px 15px 0 rgb(161, 200, 231);
+  cursor: pointer;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      to bottom right,
+      rgb(38, 226, 195),
+      rgb(54, 157, 241)
+    );
+    top: 0;
+    left: 0;
+    border-radius: 1.25rem;
+    clip-path: circle(0% at 50% 50%);
+    transition: all 0.5s ease;
+  }
 
   * {
     transition: all 0.3s ease;
+    z-index: 1;
   }
 
   .top {
     width: 100%;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
 
-    .logo {
-      width: 3rem;
-      height: 3rem;
-      margin: 0;
-      // filter: brightness(0);
+    .image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 2.25rem;
+      height: 2.25rem;
+      border-radius: 2rem;
+      border: solid 1px rgb(54, 157, 241);
+      box-shadow: 0 3px 10px 0 rgb(54, 157, 241);
+
+      .logo {
+        color: rgb(54, 157, 241);
+        font-size: 1.25rem;
+      }
     }
   }
 
   .bottom {
     transition: all 0.5s ease;
-    width: 12rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     .title {
-      margin: 0;
-      font-size: 1rem;
-      color: #f73859;
-      text-align: center;
-      width: 100%;
-      background-color: #0d1018;
-      padding: 0.25rem;
+      color: black;
+      align-self: flex-start;
+      margin: 0.25rem 0;
+      font-size: 0.7rem;
       border-radius: 0.2rem;
+      margin: 0.75rem 0;
     }
 
     .text {
-      width: 10rem;
-      color: black;
-      font-size: 0.55rem;
-      text-align: center;
+      margin: 0;
+      color: gray;
+      font-size: 0.5rem;
+      text-align: justify;
     }
   }
 
   &:hover {
-    cursor: pointer;
-
     .top {
-      .logo {
+      .image {
+        box-shadow: none;
+        border: none;
+        // background-color: rgb(54, 157, 241);
+
+        .logo {
+          color: white;
+          font-size: 1.75rem;
+        }
       }
     }
 
     .bottom {
-      transform: translateY(-50px);
-
       .title {
         color: white;
       }
+
+      .text {
+        color: white;
+      }
     }
+
+    &::after {
+      clip-path: circle(100%);
+    }
+  }
+}
+
+.hidden-top {
+  transform: translateY(300px);
+  transition: all 0.3s ease;
+  opacity: 0;
+}
+
+.hidden-bottom {
+  transform: translateY(-300px);
+  transition: all 0.3s ease;
+  opacity: 0;
+}
+
+@media only screen and (max-width: 1600px) and (max-height: 900px) {
+  .skill {
+    margin: 0.75rem;
+  }
+}
+
+@media only screen and (max-width: 1280px) and (max-height: 800px) {
+  .skill {
+    margin: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 1024px) {
+  .skill {
+    margin: 0 0.75rem;
   }
 }
