--- a/src/sections/about-me/about-me.styles.scss
+++ b/src/sections/about-me/about-me.styles.scss
@@ -4,58 +4,58 @@ $main-color: #6c7b95;
 
 .about-me {
   width: 100%;
-  padding: 2rem 10rem;
-  background-color: $main-color;
+  padding: 4rem 0;
+  padding-left: 12.5rem;
+  background-color: #262729;
   position: relative;
   display: flex;
   flex-direction: column;
-
-  .background {
-    position: absolute;
-    background-image: url("../../assets/bg-about-me.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: grayscale(1) brightness(0.2);
-    opacity: 0.4;
-  }
+  justify-content: center;
 
   .headline {
     width: fit-content;
     color: white;
-    font-size: 1.2rem;
-    padding: 1rem;
-    padding: {
-      top: 0;
-      right: 0;
-    }
-    border-bottom: solid 2px white;
-    align-self: flex-end;
+    font-size: 1rem;
+    font-weight: normal;
     z-index: 1;
   }
 
   .content {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     z-index: 1;
+
+    .letters {
+      display: flex;
+      margin-right: 2.5rem;
+
+      img {
+        height: 13rem;
+        margin-left: 2rem;
+      }
+    }
 
     .description {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 12rem;
       z-index: 1;
 
-      .my-photo {
-        width: 5rem;
-        height: auto;
-        filter: invert(1);
-        margin-right: 5rem;
+      .simple-info {
+        color: lightgray;
+        margin: 0;
+        font-size: 1rem;
+
+        span {
+          margin-right: 1rem;
+        }
+
+        .special {
+          color: rgb(54, 157, 241);
+          font-weight: bold;
+          font-size: 1.5rem;
+          margin-left: 1rem;
+        }
       }
 
       h4 {
@@ -65,10 +65,41 @@ $main-color: #6c7b95;
       }
 
       .text {
-        width: 30rem;
-        color: white;
-        font-size: 0.55rem;
+        width: 15rem;
+        color: lightgray;
+        font-size: 0.5rem;
         line-height: 0.85rem;
+        margin: 2rem 0;
+        text-align: justify;
+      }
+
+      .button {
+        color: white;
+        background-color: rgb(54, 157, 241);
+        font-size: 0.6rem;
+        padding: 0.2rem 1.5rem;
+        border-radius: 1rem;
+        transition: all 0.3s ease;
+        cursor: pointer;
+
+        &:hover {
+          background-color: black;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1536px) and (max-height: 900px) {
+  .about-me {
+    padding-left: 8rem;
+
+    .content {
+      .letters {
+        img {
+          // height: 10rem;
+          margin-left: 2rem;
+        }
       }
     }
   }
@@ -78,34 +109,54 @@ $main-color: #6c7b95;
   .about-me {
     padding: 2.5rem;
 
-    .content .description {
-      margin: 2rem 0;
+    .content {
+      .letters {
+        margin: 0;
+        width: auto;
+        justify-content: center;
+        margin: auto;
+        padding-left: 1rem;
 
-      .my-photo {
-        margin-right: 3rem;
+        img {
+          margin-left: 1.25rem;
+          padding: 0;
+          height: 7rem;
+        }
       }
 
-      .text {
-        width: 18rem;
+      .description {
+        margin: 2rem 0;
+
+        .my-photo {
+          margin-right: 2rem;
+          width: 4rem;
+        }
+
+        .text {
+          width: 16rem;
+        }
       }
     }
   }
 }
 
-@media only screen and (max-width: 1024px) and (max-height: 1366px) {
+@media only screen and (max-width: 768px) and (max-height: 1024px) {
   .about-me {
-    padding: 2.5rem;
+    padding: 1.25rem;
+    .content {
+      .description {
+        span {
+          font-size: 0.8rem;
+        }
+        .simple-info {
+          .special {
+            font-size: 0.9rem;
+          }
+        }
 
-    .content .description {
-      margin: 2rem 0;
-
-      .my-photo {
-        margin-right: 2rem;
-        width: 4rem;
-      }
-
-      .text {
-        width: 20rem;
+        .text {
+          width: 12rem;
+        }
       }
     }
   }
@@ -113,13 +164,7 @@ $main-color: #6c7b95;
 
 @media only screen and (max-width: 414px) and (max-height: 823px) {
   .about-me {
-    padding: 1rem;
-    height: 26rem;
-
-    .background {
-      background-attachment: initial;
-    }
-
+    padding: 2rem 1rem;
     .headline {
       font-size: 0.9rem;
       padding-bottom: 0.75rem;
@@ -127,20 +172,48 @@ $main-color: #6c7b95;
     }
 
     .content {
+      flex-direction: column;
+
       .description {
-        padding-top: 3rem;
+        order: 2;
+        padding: 0;
         width: 100%;
         flex-direction: column;
 
-        .my-photo {
-          margin: 3rem 0;
+        .simple-info {
+          span {
+            font-size: 1rem;
+            margin-right: 0.75rem;
+
+            .special {
+              font-size: 1.2rem;
+              margin-left: 0.5rem;
+            }
+          }
         }
 
         h4 {
+          font-size: 1rem;
         }
 
         .text {
           width: 100%;
+          font-size: 0.65rem;
+          line-height: normal;
+        }
+      }
+
+      .letters {
+        order: 1;
+        margin: 0;
+        padding: 1rem 0;
+        width: 100%;
+
+        justify-content: center;
+
+        img {
+          height: 7rem;
+          margin: 0 0.5rem;
         }
       }
     }
