--- a/src/sections/my-interests/my-interests.styles.scss
+++ b/src/sections/my-interests/my-interests.styles.scss
@@ -1,141 +1,110 @@
 .my-interests {
   width: 100%;
+  padding: 4rem 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  background-color: #0d1018;
+  background: url("../../assets/bg-interests.png");
+  background-size: cover;
+  background-position: center;
   color: white;
-  padding: 2rem 10rem;
   position: relative;
-
-  .background {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    background-image: url("../../assets/space.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    filter: brightness(0.4);
-    opacity: 0.4;
-  }
 
   * {
     z-index: 1;
   }
 
-  .headline {
-    margin-top: 2rem;
-    font-size: 1.2rem;
-    align-self: flex-end;
-    width: fit-content;
-    padding: 1rem;
-    padding: {
-      top: 0;
-      right: 0;
+  .left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 5rem;
+    position: relative;
+
+    img {
+      height: 13rem;
+      transition: transform 0.75s ease, opacity 1s ease;
+      border-radius: 0.1rem;
+      box-shadow: 0 2px 20px 0 rgb(182, 182, 182);
+
+      &.additional {
+        position: absolute;
+        height: 8rem;
+        right: 3rem;
+        bottom: 1rem;
+        z-index: 2;
+      }
     }
-    border-bottom: solid 2px #f73859;
+
+    p {
+      color: rgb(87, 87, 87);
+      width: 12rem;
+      font-size: 0.6rem;
+      margin-top: 1.5rem;
+      font-weight: bold;
+    }
+
+    .button {
+      background-color: black;
+      color: white;
+      font-size: 0.6rem;
+      padding: 0.2rem 1.1rem;
+      border-radius: 1rem;
+      transition: all 0.3s ease;
+      cursor: pointer;
+      text-decoration: none;
+
+      &:hover {
+        background-color: rgb(54, 157, 241);
+      }
+    }
   }
 
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin: 8rem 0;
-    color: white;
-    transition: all 0.75s ease;
+  .right {
+    width: 50%;
+    padding-left: 3rem;
 
-    // background-color: gray;
+    .headline {
+      font-weight: bold;
+      color: white;
+      font-size: 1.1rem;
+      z-index: 1;
+      margin: 0;
+    }
 
     span {
+      width: 15.5rem;
+      margin-top: 1.5rem;
+      font-size: 0.53rem;
+      line-height: 0.9rem;
       display: flex;
       align-items: center;
-      font-size: 0.5rem;
-      line-height: 1rem;
-      width: 20rem;
-      height: 13rem;
-      padding: 1rem;
-      background-color: #0d1018;
+      color: white;
       transition: transform 0.75s ease, opacity 1s ease;
-      opacity: 0;
-      transform: translateY(-300px);
-    }
-
-    img {
-      height: 13rem;
-      border: solid 0.15rem white;
-      transition: transform 0.75s ease, opacity 1s ease;
-      opacity: 0;
-      transform: translateY(300px);
-    }
-  }
-  .swipe {
-    span {
-      transform: translateY(-75px);
-      opacity: 1;
-    }
-
-    img {
-      transform: translateY(75px);
-      opacity: 1;
     }
   }
 }
 
 @media only screen and (max-width: 1600px) and (max-height: 900px) {
   .my-interests {
-    padding: 2rem 8rem;
-
-    .container {
-    }
-  }
-}
-
-@media only screen and (max-width: 1440px) and (max-height: 900px) {
-  .my-interests {
-    padding: 2rem 6rem;
-  }
-}
-
-@media only screen and (max-width: 1280px) and (max-height: 800px) {
-  .my-interests {
-    padding: 2rem 5rem;
-  }
-}
-
-@media only screen and (max-width: 1024px) and (max-height: 1366px) {
-  .my-interests {
-    padding: 3rem;
-
-    .container {
-      width: 100%;
-      margin: 6rem 0;
-      flex-direction: column-reverse;
-      background-color: transparent;
-
-      span {
-        width: 18rem;
-        font-size: 0.5rem;
-        transform: translate(450px);
-      }
-
+    .left {
+      padding-left: 3rem;
       img {
-        width: 18rem;
-        transform: none;
-        transform: translate(-450px);
-      }
-    }
+        height: 13rem;
+        transition: transform 0.75s ease, opacity 1s ease;
+        border-radius: 0.1rem;
+        box-shadow: 0 2px 20px 0 rgb(182, 182, 182);
 
-    .swipe {
-      span {
-        transform: translate(100px);
+        &.additional {
+          position: absolute;
+          height: 8rem;
+          right: 0rem;
+          bottom: 0;
+          z-index: 2;
+        }
       }
-
-      img {
-        transform: translate(-100px);
+      p {
+        width: 10rem;
       }
     }
   }
@@ -143,54 +112,128 @@
 
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .my-interests {
-    padding: 3rem;
+    padding: 1rem;
 
-    .container {
-      width: 100%;
-      margin: 6rem 0;
-      margin-bottom: 3rem;
+    .left {
+      padding-left: 0rem;
+      img {
+        height: 10rem;
+        transition: transform 0.75s ease, opacity 1s ease;
+        border-radius: 0.1rem;
+        box-shadow: 0 2px 20px 0 rgb(182, 182, 182);
+
+        &.additional {
+          height: 6rem;
+          right: -1rem;
+          bottom: 1rem;
+          z-index: 2;
+        }
+      }
+      p {
+        width: 9rem;
+        font-size: 0.6rem;
+      }
+    }
+    .right {
+      padding-left: 2.5rem;
+      span {
+        width: 13rem;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 1024px) {
+  .my-interests {
+    padding: 0.75rem;
+
+    .left {
+      img {
+        height: 9rem;
+        transition: transform 0.75s ease, opacity 1s ease;
+        border-radius: 0.1rem;
+        box-shadow: 0 2px 20px 0 rgb(182, 182, 182);
+
+        &.additional {
+          height: 4.5rem;
+          right: -0.25rem;
+          bottom: 2rem;
+          z-index: 2;
+        }
+      }
+      p {
+        width: 8rem;
+        font-size: 0.55rem;
+        margin-top: 0.5rem;
+      }
+    }
+    .right {
+      padding-left: 1rem;
+      span {
+        width: 13rem;
+      }
     }
   }
 }
 
 @media only screen and (max-width: 414px) and (max-height: 823px) {
   .my-interests {
-    padding: 1rem;
+    padding: 2rem 1rem;
+    flex-direction: column;
+    align-items: center;
+    background: rgb(48, 178, 218);
 
-    .background {
-      display: none;
-    }
-
-    .headline {
-      font-size: 0.9rem;
-      padding-bottom: 0.75rem;
-      border-width: 1px;
-    }
-
-    .container {
+    .left {
+      order: 2;
       width: 100%;
-      margin: 4rem 0;
-      margin-bottom: 3rem;
-
-      span {
-        width: 100%;
-        background-color: transparent;
-        margin-top: 2rem;
-        padding: 0;
-      }
-
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 2rem;
       img {
         width: 100%;
-        height: auto;
+        transition: transform 0.75s ease, opacity 1s ease;
+        border-radius: 0.1rem;
+        box-shadow: 0 2px 20px 0 rgb(182, 182, 182);
+        margin: 0;
+
+        &.additional {
+          height: 4.5rem;
+          right: -0.25rem;
+          bottom: 2rem;
+          z-index: 2;
+          display: none;
+        }
+      }
+      p {
+        width: 100%;
+        font-size: 0.55rem;
+        margin-top: 0.5rem;
+        color: white;
+      }
+
+      .button {
+        align-self: flex-start;
       }
     }
+    .right {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-left: 0;
+      margin: 0;
 
-    .swipe {
-      span {
-        transform: none;
+      .headline {
+        width: 100%;
       }
-      img {
-        transform: none;
+
+      span {
+        width: 100%;
+        text-align: justify;
+        font-size: 0.55rem;
       }
     }
   }
