--- a/src/sections/my-skills/my-skills.styles.scss
+++ b/src/sections/my-skills/my-skills.styles.scss
@@ -3,28 +3,38 @@ $main-color: #3e64ff;
 
 .my-skills {
   width: 100%;
-  height: 25rem;
-  background-color: white;
+  // background-color: #262729;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   overflow: hidden;
 
+  .corner {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+
+  * {
+    z-index: 1;
+  }
+
   .headline {
-    color: #0d1018;
+    color: white;
     margin-top: 2rem;
     font-size: 1.2rem;
     padding: 1rem;
     padding-top: 0;
-    border-bottom: solid 2px #f73859;
   }
 
   .about-skills {
     width: 25rem;
+    color: white;
     text-align: center;
     font-size: 0.55rem;
-    margin: 1rem;
     transition: all 0.75s ease;
     transform: translateY(300px);
     opacity: 0;
@@ -48,7 +58,10 @@ $main-color: #3e64ff;
 
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .my-skills {
-    height: 26rem;
+    .corner {
+      height: 20rem;
+      width: auto;
+    }
 
     .about-skills {
       width: 20rem;
@@ -58,7 +71,6 @@ $main-color: #3e64ff;
 
 @media only screen and (max-width: 768px) and (max-height: 1024px) {
   .my-skills {
-    height: 26rem;
     padding: 1rem;
 
     .headline {
@@ -68,7 +80,16 @@ $main-color: #3e64ff;
     }
 
     .about-skills {
-      width: 14rem;
+      width: auto !important;
+      font-size: 0.6rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 414px) and (max-height: 823px) {
+  .my-skills {
+    .about-skills {
+      width: 12rem;
     }
   }
 }
