--- a/src/sections/opening/opening.styles.scss
+++ b/src/sections/opening/opening.styles.scss
@@ -1,41 +1,45 @@
 .opening {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: #0d1018;
   position: relative;
-
-  .background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0;
-    transition: all 1s ease;
-  }
-
-  .bg-mobile {
-    display: none;
-  }
+  background: url("../../assets/background.png");
+  background-size: cover;
+  background-position: bottom;
 
   .about-site {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding-top: 20vh;
-    color: white;
-    z-index: 0;
+    margin-left: 12.5rem;
+    z-index: 1;
+    width: 22rem;
 
     h1 {
-      font-size: 2rem;
+      font-size: 2.25rem;
+      margin: 0;
     }
 
     p {
-      font-size: 1rem;
+      font-size: 1.1rem;
+      margin: 2rem 0;
+      font-weight: bold;
+      span {
+        color: rgb(54, 157, 241);
+      }
+    }
+
+    .button {
+      color: white;
+      background-color: rgb(54, 157, 241);
+      font-size: 0.6rem;
+      padding: 0.2rem 1.5rem;
+      border-radius: 1rem;
+      transition: all 0.3s ease;
+      cursor: pointer;
+
+      &:hover {
+        background-color: black;
+      }
     }
   }
 }
@@ -54,6 +58,27 @@
   }
 }
 
+@media only screen and (max-width: 1024px) and (max-height: 1366px) {
+  .opening {
+    background: url("../../assets/bg-ipad.png");
+    background-position: right;
+    background-size: cover;
+
+    .about-site {
+      margin-left: 2rem;
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      p {
+        font-size: 1rem;
+        width: 15rem;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 768px) and (max-height: 1024px) {
   .opening {
     .about-site {
@@ -63,6 +88,7 @@
 
       p {
         font-size: 0.8rem;
+        width: 12rem;
       }
     }
   }
@@ -70,30 +96,39 @@
 
 @media only screen and (max-width: 414px) and (max-height: 823px) {
   .opening {
-    .background {
-      display: none;
-    }
+    background: url("../../assets/bg-tel.jpg");
+    background-position: top;
+    background-size: cover;
 
-    .bg-mobile {
-      display: block;
+    &::after {
+      content: "";
+      position: absolute;
       width: 100%;
       height: 100%;
-      position: absolute;
-      background-image: url("../../assets/bg-alt.jpg");
-      background-size: cover;
-      background-attachment: initial;
-      background-position: center;
-      filter: brightness(0.3) grayscale(1);
-      opacity: 0.3;
+      top: 0;
+      left: 0;
+      background-color: white;
+      opacity: 0.5;
     }
 
     .about-site {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
       h1 {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
       }
 
       p {
-        font-size: 0.6rem;
+        font-size: 0.8rem;
+        text-align: center;
+      }
+
+      .button {
+        font-size: 0.8rem;
+        width: fit-content;
       }
     }
   }
