--- a/src/sections/opening/opening.styles.scss
+++ b/src/sections/opening/opening.styles.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  background: url("../../assets/background.png");
+  background: url("../../assets/background.jpg");
   background-size: cover;
   background-position: bottom;
 
@@ -60,7 +60,7 @@
 
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .opening {
-    background: url("../../assets/bg-ipad.png");
+    background: url("../../assets/bg-ipad.jpg");
     background-position: right;
     background-size: cover;
 
