github link adder

--- a/src/sections/contact/contact.styles.scss
+++ b/src/sections/contact/contact.styles.scss
@@ -59,6 +59,10 @@
       color: lightgray;
       margin: 0;
       margin-left: 2rem;
+
+      span {
+        margin-right: 0.5rem;
+      }
     }
   }
 
