--- a/src/sections/about-me/about-me.styles.scss
+++ b/src/sections/about-me/about-me.styles.scss
@@ -105,6 +105,12 @@ $main-color: #6c7b95;
   }
 }
 
+@media only screen and (max-width: 1366px) and (max-height: 1024px) {
+  .about-me {
+    padding-left: 2.5rem;
+  }
+}
+
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .about-me {
     padding: 2.5rem;
