--- a/src/sections/development/development.styles.scss
+++ b/src/sections/development/development.styles.scss
@@ -159,6 +159,47 @@ $main-color: #6c7b95;
   }
 }
 
+@media only screen and (max-width: 1366px) and (max-height: 1024px) {
+  .development {
+    padding: 2rem;
+    height: auto;
+
+    .strip {
+      // transform: rotate(-90deg);
+    }
+
+    .content {
+      .heading {
+        width: 15rem;
+      }
+      .new-skills {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        #node,
+        #redux,
+        #photoshop {
+          transform: translateX(300px);
+          opacity: 0;
+        }
+
+        .box {
+          justify-content: center;
+          margin: 0.75rem 0;
+
+          .description {
+            .name {
+              font-size: 0.7rem;
+              color: white;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   .development {
     padding: 2rem;
