--- a/src/sections/opening/opening.styles.scss
+++ b/src/sections/opening/opening.styles.scss
@@ -44,9 +44,10 @@
   }
 }
 
-@media only screen and (max-width: 1600px) and (max-height: 900px) {
+@media only screen and (max-width: 1600px) and (max-height: 1024px) {
   .opening {
     .about-site {
+      margin-left: 8rem;
       h1 {
         font-size: 1.6rem;
       }
